[workspace]

members = [
    "ros",
    "remu",
    "ram",
    "rapps",
    "rconfig",
]

resolver = "2"

[workspace.package]
authors = ["Qi Zhan <qizhan@zju.edu.cn>"]
description = "emulating computer system in Rust"
repository = "https://github.com/Qi-Zhan/Just-For-Fun"

[profile.release]
debug = true
